<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.github.martinpaljak</groupId>
        <artifactId>javacard</artifactId>
        <version>19.06.19</version>
    </parent>
    <artifactId>apdu4j</artifactId>
    <version>19.05.08</version>
    <packaging>pom</packaging>
    <name>apdu4j</name>
    <url>https://github.com/martinpaljak/apdu4j</url>
    <description>Working with smart card readers? Everything related to javax.smartcardio</description>
    <scm>
        <url>https://github.com/martinpaljak/apdu4j</url>
        <developerConnection>scm:git:git@github.com:martinpaljak/apdu4j.git</developerConnection>
    </scm>
    <licenses>
        <license>
            <name>MIT</name>
            <url>https://github.com/martinpaljak/apdu4j/blob/master/LICENSE</url>
            <distribution>repo</distribution>
        </license>
        <license>
            <name>GPL</name>
            <url>https://github.com/martinpaljak/apdu4j/blob/master/core/src/main/java/apdu4j/CommandAPDU.java</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <modules>
        <module>core</module>
        <module>pcsc</module>
        <module>tool</module>
        <module>json-remote-emv</module>
        <module>testing</module>
    </modules>

    <dependencies>
        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.25</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.25</version>
            <scope>test</scope>
        </dependency>
        <!-- Testing -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.14.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>target/generated-resources</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <configuration>
                    <excludeFilterFile>spotbugs.xml</excludeFilterFile>
                </configuration>
            </plugin>
            <!-- TODO: move to metacard -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <source>8</source>
                </configuration>
            </plugin>
            <!-- GitTagCalVer -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>git-version</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>git</executable>
                    <outputFile>target/generated-resources/apdu4j/pro_version.txt</outputFile>
                    <arguments>
                        <argument>describe</argument>
                        <argument>--tags</argument>
                        <argument>--always</argument>
                        <argument>--long</argument>
                        <argument>--dirty</argument>
                    </arguments>
                </configuration>
            </plugin>
            <!-- Reproducible -->
            <plugin>
                <groupId>io.github.zlika</groupId>
                <artifactId>reproducible-build-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
